Added tabs for string manufacturers

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,36 @@ body {
     color: #fff; /* White text */
 }
 
+nav {
+    width: 100%;
+    background-color: #333;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    float: left;
+}
+
+nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    background-color: #111;
+}
+
 h1 {
     color: #fff; /* White text */
 }
